[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Blocks.png" type="Texture" id=1]
[ext_resource path="res://World/BombBlock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 20 )

[node name="BombBlock" type="KinematicBody2D" groups=["WorldBlocks"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplodeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodeArea"]
shape = SubResource( 2 )

[node name="PlayerCheckArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheckArea"]
shape = SubResource( 3 )

[node name="FuseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerCheckArea" to="." method="_on_PlayerCheckArea_body_entered"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_FuseTimer_timeout"]
